# plasmi3bar

./: CMakeLists.txt  LICENSE  README.md
i3ipc/: CMakeLists.txt  i3ipcengine.cpp  i3ipcengine.h  i3socket.cpp  i3socket.h  plasma-dataengine-i3ipc.desktop
package/: metadata.desktop
package/contents/ui/: main.qml
